--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
-.App {
-  text-align: center;
-}
+.App {}
+
+/* .customer-grid {
+  height: 80vh;
+  width: 90vw;
+  /* fallback if needed */
+/* height: calc(100% - 3em); */
+/* }  */
 
 .App-logo {
   height: 40vmin;
@@ -32,6 +37,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
